# Ark

./: .gitignore  Cargo.toml  README.md  install.sh
src/: main.rs
src/ai/: config.rs  groq.rs  mod.rs
src/cli/: ai.rs  branch.rs  check.rs  clone.rs  diff.rs  history.rs  merge.rs  mod.rs  pull.rs  push.rs  remote.rs  restore.rs  save.rs  scan.rs  start.rs  stash.rs  sync.rs  tag.rs  undo.rs
src/core/: branch.rs  commit.rs  mod.rs  repo.rs  tracker.rs
src/git/: git_wrapper.rs  mod.rs
src/security/: scanner.rs
tests/: integration_test.rs
