[package]
name = "ark-vcs"
version = "1.0.0"
edition = "2024"
description = "A simple, fast, and AI-powered version control tool"
license = "MIT"
repository = "https://github.com/sumitt-wayne/Ark"
keywords = ["version-control", "git", "ai", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
colored = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[[bin]]
name = "ark"
path = "src/main.rs"
